updated frontend code

--- a/Ecommerce-frontend/public/style.css
+++ b/Ecommerce-frontend/public/style.css
@@ -92,13 +92,15 @@
 }
 
 .item-title{
-    font-size: 48px;
+    font-size: 32px;
+    font-weight: 500;
 }
 
 .item-price{
     font-size: 32px;
     padding-top: 10px;
     padding-bottom: 10px;
+    font-weight: 500;
    
 }
 
@@ -116,8 +118,8 @@
 .btn-size{
     background: white;
     border: 1px solid #CCCCCC;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     text-align: center;
     font-size: smaller;
     color: #888888;
@@ -135,7 +137,8 @@
     background: white;
     width: 150px;
     border: 1px solid #CCCCCC;
-    
+    height: 50px;
+    margin-right: 5px;
     padding: 10px;
 }
 .btn-continue{
@@ -155,8 +158,8 @@
 .btn-quantity{
   background: white;
   border: 1px solid #000000;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   text-align: center;
   font-size: smaller;
   display: flex;
@@ -166,34 +169,50 @@
 }
 
 .dark .btn-add{
-    background: black;
+    background: white;
     width: 150px;
     
     border: 1px solid #CCCCCC;
-    
+    color:black;
     padding: 10px;
 }
 
-.btn-size:focus, .btn-add{
+.btn-size:focus{
     background: black;
     border: 2px solid #222222;
     outline: 0;
+}
+.dark .btn-size:focus{
+  background: rgb(163 163 163);
+  border: 2px solid #222222;
+  outline: 0;
 }
 .selected-size{
   background: black;
     border: 2px solid #222222;
     outline: 0;
 }
-.dark .btn-size:focus, .btn-add{
-    background: white;
+.dark .selected-size{
+  background: rgb(163 163 163);
     border: 2px solid #222222;
     outline: 0;
+}
+
+.clear-btn{
+  
+    background: transparent;
+color: rgb(89, 89, 89);
 }
 
 .btn-add:focus, .btn-add:hover{
     background: white;
     color: black;
     outline: 0;
+}
+.dark .btn-add:focus, .dark .btn-add:hover{
+  background: black;
+  color: white;
+  outline: 0;
 }
 
 .item-title-cart, .item-price-cart{
@@ -303,7 +322,7 @@
     text-align: center;
     display: flex;
     justify-content: center;
-    align-items: center;
+    padding: 5px;
   }
   .thumbnail-nav.prev{
     position: absolute;
@@ -379,20 +398,20 @@
 
 }
 .item-sizechart-text{
-  color: #383838;
+  color: rgb(179, 135, 142);
   font-size:12px;
 }
 .out-of-stock {
   color: red;
-  font-size: 6px;
-  display: block;
+  font-size: 10px;
+ 
   text-align: center;
 }
 
 .low-stock {
   color: orange;
-  font-size: 6px;
-  display: block;
+  font-size: 10px;
+  
   text-align: center;
 }
 
@@ -410,6 +429,7 @@
   width: 250px;
   height: max-content;
   border-radius: 0.75rem;
+  margin-top: 45px;
   border: 1px solid #ccc;
   
 }
@@ -445,6 +465,7 @@
   display: flex;
   flex-wrap: wrap;
   height: fit-content;
+  justify-content: space-between;
   gap: 20px;
   
 }
@@ -598,7 +619,18 @@
     color: #c0c0c0;
     transition: color 0.2s ease-in-out;
   }
-  
+  .wishlist-cart-count{
+    position: absolute;
+    top: -5px;
+    right: 3px;
+    font-size: 10px;
+    padding: 0px;
+    width: 15px;
+    color: white;
+    text-align: center;
+    border-radius: 50%;
+    background-color: red;
+  }
   .star.filled {
     color: #ffd700;
   }
@@ -768,4 +800,31 @@
   object-position: top;
   border-top-right-radius: 0.75rem;
   border-top-left-radius: 0.75rem;
+}
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #f3f3f3;
+  border-top: 5px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
